--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 @import url(https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap);*{box-sizing:border-box;margin:0;padding:0}body{font-family:Poppins,sans-serif}.container{border:1px solid #4682b4;border-radius:5px;margin:30px auto;max-width:500px;min-height:300px;overflow:auto;padding:30px}.header{align-items:center;display:flex;justify-content:space-between;margin-bottom:20px}.btn{background:#000;border:none;border-radius:5px;color:#fff;cursor:pointer;display:inline-block;font-family:inherit;font-size:15px;margin:5px;padding:10px 20px;text-decoration:none}.btn:focus{outline:none}.btn:active{-webkit-transform:scale(.98);transform:scale(.98)}.btn-block{display:block;width:100%}.task{background:#f4f4f4;cursor:pointer;margin:5px;padding:10px 20px}.task.reminder{border-left:5px solid green}.task h3{align-items:center;display:flex;justify-content:space-between}.add-form{margin-bottom:40px}.form-control{margin:20px 0}.form-control label{display:block}.form-control input{font-size:17px;height:40px;margin:5px;padding:3px 7px;width:100%}.form-control-check{align-items:center;display:flex;justify-content:space-between}.form-control-check label{flex:1 1}.form-control-check input{flex:2 1;height:20px}footer{margin-top:30px;text-align:center}
 body {
   font-family: 'Poppins', sans-serif;
-  background-image:url("img/BenAudio.jpeg")
+  background-image:url("img/BenAudio.jpeg");
+  background-size: cover;
 }
 
 .Title {
@@ -74,13 +75,12 @@ input[type=range] {
 }
 
 input[type="range"]::-webkit-slider-thumb {
-  -webkit-appearance: none; /* Override default look */
+  -webkit-appearance: none;
   appearance: none;
-  /*border-bottom: 10px;*/
-  margin-top: -75px; /* Centers thumb on the track */
-  /*margin-bottom: 30px;*/
+  margin-top: -79px;
+  /*height: 100%;*/
   background-color: rgb(255, 255, 255);
   height: 4rem;
   width: 0.2rem;
-  transition-duration: 0.1s;
+  cursor: pointer;
 }
