--- a/src/App.css
+++ b/src/App.css
@@ -8,38 +8,13 @@ body {
 .Title {
   margin-top: 3%;
   color: white;
-  margin-bottom: 20px;
+
 
 }
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
 
 .audioPlayer {
   width: 40%;
@@ -47,6 +22,8 @@ body {
   border: 1px #000 solid;
   margin-left: 30%;
   flex-direction: row;
+  height: 55px;
+
 
 }
 
@@ -58,7 +35,7 @@ body {
   font-size: 40px;
   cursor: pointer;
   margin: 5px;
-  /*color: rgba(255, 0, 0, 0.32)*/
+
 }
 
 .ButtonPlayer:hover {
@@ -78,9 +55,8 @@ input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
   margin-top: -79px;
-  /*height: 100%;*/
   background-color: rgb(255, 255, 255);
-  height: 4rem;
-  width: 0.2rem;
-  cursor: pointer;
+  height: 5.5rem;
+  width: 1px;
+
 }
